1.0.1 fix dark mode color

--- a/src/css/LoadEx.css
+++ b/src/css/LoadEx.css
@@ -5,6 +5,7 @@
     align-items: center;
     margin-top: 20px;
     margin-bottom: 20px;
+    background: white;
 }
 .example-button{
     margin:10px;
